StudentContent is made StudentContentCompletion: the table to track student's content completion, fixed CourseStudent api & services